force-app/main/default/objects/DU_ContractOffer__c/DU_ContractOffer__c.object-meta.xml
<CustomObject>
    <label>Contract Offer</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Contract Offer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Offers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>