force-app/main/default/objects/DU_ContractOffer__c/fields/DU_ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>DU_ApplicationId__c</fullName>
    <description>Local Transaction Id</description>
    <inlineHelpText>This is the local transaction ID that references a customer application/proposal in the market system.</inlineHelpText>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>