force-app/main/default/objects/DU_ContractOffer__c/fields/DU_ContractFileIds__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractFileIds__c</fullName>
    <description>Comma-separated set of ContentDocument Ids of files that are subject to manual classification.</description>
    <label>Contract File Ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>