force-app/main/default/objects/DU_ContractOffer__c/fields/DU_CreditDecision__c.field-meta.xml
<CustomField>
    <fullName>DU_CreditDecision__c</fullName>
    <label>Credit Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Approved</fullName>
            </value>
            <value>
                <fullName>Credit Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>