force-app/main/default/objects/DU_ContractOffer__c/fields/DU_CustomerDataProcessed__c.field-meta.xml
<CustomField>
    <fullName>DU_CustomerDataProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Data Processed</label>
    <type>Checkbox</type>
</CustomField>