force-app/main/default/objects/DU_ContractOffer__c/fields/DU_DataStoredTill__c.field-meta.xml
<CustomField>
    <fullName>DU_DataStoredTill__c</fullName>
    <formula>CreatedDate + $CustomMetadata.DU_BopConfiguration__mdt.Config.DU_RetentionPeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Stored Till</label>
    <type>Date</type>
</CustomField>