force-app/main/default/objects/DU_ContractOffer__c/fields/DU_DealerEmail__c.field-meta.xml
<CustomField>
    <fullName>DU_DealerEmail__c</fullName>
    <label>Dealer Email</label>
    <type>Email</type>
</CustomField>