force-app/main/default/objects/DU_ContractOffer__c/fields/DU_DealershipID__c.field-meta.xml
<CustomField>
    <fullName>DU_DealershipID__c</fullName>
    <label>Dealership ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>