force-app/main/default/objects/DU_ContractOffer__c/fields/DU_DocumentsPrinted__c.field-meta.xml
<CustomField>
    <fullName>DU_DocumentsPrinted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Printed</label>
    <type>Checkbox</type>
</CustomField>