force-app/main/default/objects/DU_ContractOffer__c/fields/DU_DocumentsSigned__c.field-meta.xml
<CustomField>
    <fullName>DU_DocumentsSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Signed</label>
    <type>Checkbox</type>
</CustomField>