force-app/main/default/objects/DU_ContractOffer__c/fields/DU_IsTimeoutApplicable__c.field-meta.xml
<CustomField>
    <fullName>DU_IsTimeoutApplicable__c</fullName>
    <description>Used by Workflow Rules</description>
    <formula>$CustomMetadata.DU_BopConfiguration__mdt.Config.DU_IsTimeoutApplicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Timeout Applicable?</label>
    <type>Checkbox</type>
</CustomField>