force-app/main/default/objects/DU_ContractOffer__c/fields/DU_Product__c.field-meta.xml
<CustomField>
    <fullName>DU_Product__c</fullName>
    <label>Product</label>
    <type>TextArea</type>
</CustomField>