force-app/main/default/objects/DU_ContractOffer__c/fields/DU_Stage__c.field-meta.xml
<CustomField>
    <fullName>DU_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application data submitted</fullName>
            </value>
            <value>
                <fullName>Credit check in progress</fullName>
            </value>
            <value>
                <fullName>Credit check done</fullName>
            </value>
            <value>
                <fullName>Contract documents upload</fullName>
            </value>
            <value>
                <fullName>Transaction completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>