force-app/main/default/objects/DU_ContractOffer__c/fields/DU_TimeoutNotificationEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>DU_TimeoutNotificationEmailAddress__c</fullName>
    <defaultValue>$CustomMetadata.DU_BopConfiguration__mdt.Config.DU_TimeoutNotificationEmailAddress__c</defaultValue>
    <description>Used by Workflow Rules</description>
    <label>Timeout Notification Email Address</label>
    <type>Email</type>
</CustomField>