force-app/main/default/objects/DU_ContractOffer__c/fields/DU_TimeoutStarted__c.field-meta.xml
<CustomField>
    <fullName>DU_TimeoutStarted__c</fullName>
    <description>Used by Workflow Rules</description>
    <label>Timeout Started</label>
    <type>DateTime</type>
</CustomField>