force-app/main/default/objects/DU_ContractOffer__c/fields/DU_ToDelete__c.field-meta.xml
<CustomField>
    <fullName>DU_ToDelete__c</fullName>
    <formula>TODAY() &gt;= DU_DataStoredTill__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Delete</label>
    <type>Checkbox</type>
</CustomField>