force-app/main/default/objects/DU_ContractOffer__c/fields/DU_TransactionId__c.field-meta.xml
<CustomField>
    <fullName>DU_TransactionId__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>