force-app/main/default/objects/DU_ContractOffer__c/validationRules/DU_CreditDecisionCannotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_CreditDecisionCannotChange</fullName>
    <active>true</active>
    <description>CreditDecision__c cannot be changed from Approval or Rejection</description>
    <errorConditionFormula>ISCHANGED(DU_CreditDecision__c) &amp;&amp; (PRIORVALUE(DU_CreditDecision__c) == &quot;Approval&quot; || PRIORVALUE(DU_CreditDecision__c) == &quot;Rejection&quot;) &amp;&amp; $Profile.Name != &quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>DU_CreditDecision__c</errorDisplayField>
    <errorMessage>Credit Decision cannot be changed from Approval or Rejection</errorMessage>
</ValidationRule>