force-app/main/default/objects/DU_ContractOffer__c/validationRules/DU_OnlyDefaultAndRequiredValues.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_OnlyDefaultAndRequiredValues</fullName>
    <active>true</active>
    <description>Only default and required values can be entered upon data entry</description>
    <errorConditionFormula>ISNEW() &amp;&amp; 
!ISPICKVAL(DU_Stage__c, &quot;&quot;) &amp;&amp; !ISPICKVAL(DU_Stage__c, &quot;Application data submitted&quot;)</errorConditionFormula>
    <errorMessage>Only Transaction Id and Product can be entered upon data entry</errorMessage>
</ValidationRule>