force-app/main/default/objects/DU_ContractOffer__c/validationRules/DU_ProductRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_ProductRequired</fullName>
    <active>true</active>
    <description>DU_Product__c is mandatory</description>
    <errorConditionFormula>ISBLANK(DU_Product__c)</errorConditionFormula>
    <errorDisplayField>DU_Product__c</errorDisplayField>
    <errorMessage>Product must have a value</errorMessage>
</ValidationRule>