force-app/main/default/objects/DU_ContractOffer__c/validationRules/DU_TransactionIdCannotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_TransactionIdCannotChange</fullName>
    <active>true</active>
    <description>Transaction Id can&apos;t be changed</description>
    <errorConditionFormula>ISCHANGED(DU_TransactionId__c) &amp;&amp; $Profile.Name != &quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>DU_TransactionId__c</errorDisplayField>
    <errorMessage>Transaction Id can&apos;t be changed.</errorMessage>
</ValidationRule>