force-app/main/default/objects/DU_ContractOffer__c/validationRules/DU_TransactionIdIsUuid.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_TransactionIdIsUuid</fullName>
    <active>true</active>
    <description>DU_TransactionId__c must follow the UUID format.</description>
    <errorConditionFormula>!REGEX(DU_TransactionId__c, &quot;^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$&quot;)</errorConditionFormula>
    <errorDisplayField>DU_TransactionId__c</errorDisplayField>
    <errorMessage>Provide a UUID value in the format of 8-4-4-4-12 hexadecimal digits.</errorMessage>
</ValidationRule>