force-app/main/default/objects/DU_ContractOffer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DU_TransactionId__c</columns>
    <columns>DU_Product__c</columns>
    <columns>DU_Stage__c</columns>
    <columns>DU_CreditDecision__c</columns>
    <columns>DU_DataStoredTill__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>